fix(comparison-table): tablet layout sticky on mobile (#982)

--- a/projects/ng-aquila/src/comparison-table/comparison-table.component.scss
+++ b/projects/ng-aquila/src/comparison-table/comparison-table.component.scss
@@ -302,7 +302,9 @@
 
     // MOBILE STYLING
     @include media-breakpoint-down(small) {
-        overflow-x: scroll;
+        &:has(.nx-comparison-table__mobile-view) {
+            overflow-x: scroll;
+        }
     }
 
     ::ng-deep table {
